@@ -127,3 +127,49 @@ It is only used in order to run HBase that allows us to create a database for th
 
 ## HBase
 
+Finally, to set up HBase, create a `data\` folder in the directory with a `hbase\` and a `zookeeper\` folder. The HBASE_HOME environment variable is set to `C:\twitter\hbase-2.2.5`. Then, apply the following modifications to the configuration files.
+
+In `.\bin\hbase.cmd`
+*Delete %HEAP_SETTINGS% in `set java_arguments` line*
+
+In `.\conf\hbase-env.cmd`
+~~~
+set JAVA_HOME=%JAVA_HOME%
+set HBASE_CLASSPATH=%HBASE_HOME%\lib\client-facing-thirdparty\*
+set HBASE_HEAPSIZE=8000
+set HBASE_OPTS="-XX:+UseConcMarkSweepGC" "-Djava.net.preferIPv4Stack=true"
+set SERVER_GC_OPTS="-verbose:gc" "-XX:+PrintGCDetails" "-XX:+PrintGCDateStamps" %HBASE_GC_OPTS%
+set HBASE_USE_GC_LOGFILE=true
+
+set HBASE_JMX_BASE="-Dcom.sun.management.jmxremote.ssl=false" "-Dcom.sun.management.jmxremote.authenticate=false"
+
+set HBASE_MASTER_OPTS=%HBASE_JMX_BASE% "-Dcom.sun.management.jmxremote.port=10101"
+set HBASE_REGIONSERVER_OPTS=%HBASE_JMX_BASE% "-Dcom.sun.management.jmxremote.port=10102"
+set HBASE_THRIFT_OPTS=%HBASE_JMX_BASE% "-Dcom.sun.management.jmxremote.port=10103"
+set HBASE_ZOOKEEPER_OPTS=%HBASE_JMX_BASE% -Dcom.sun.management.jmxremote.port=10104"
+set HBASE_REGIONSERVERS=%HBASE_HOME%\conf\regionservers
+set HBASE_LOG_DIR=%HBASE_HOME%\logs
+set HBASE_IDENT_STRING=%USERNAME%
+set HBASE_MANAGES_ZK=true
+~~~
+
+In `.\conf\hbase-site.xml`
+~~~
+<configuration>
+  <property>
+    <name>hbase.rootdir</name>
+    <value>file:///C:/twitter/hbase-2.2.5/data/hbase</value>
+  </property>
+  <property>
+    <name>hbase.zookeeper.property.dataDir</name>
+    <value>/C:/twitter/hbase-2.2.5/data/zookeeper</value>
+  </property>
+  <property>
+    <name>hbase.zookeeper.quorum</name>
+    <value>localhost</value>
+  </property>
+</configuration>
+~~~
+
+To launch HBase, execute the `start-hbase.cmd` file in a Command Prompt window placed in the `.\bin folder`.
+
